--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cafe Menu</title>
+    <style>
+        h1,h2,p {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    
+    <main>
+        <h1>CAMPER CAFE</h1>
+        <p>Est. 2020</p>
+        <section>
+            <h2>Coffee</h2>
+        </section>
+    </main>
 </body>
 </html>
